# haversine-perf-aware

./: Cargo.toml
coordinate-generator/: Cargo.toml
coordinate-generator/src/: lib.rs  main.rs
json-coord-parser/: Cargo.toml
json-coord-parser/benches/: deg_parse.rs
json-coord-parser/src/: lib.rs  main.rs
rdtsc_timer_rogflow/: Cargo.toml
rdtsc_timer_rogflow/src/: lib.rs  main.rs
timer-macros/: Cargo.toml
timer-macros/src/: lib.rs
