[workspace]

members = [
"coordinate-generator",
"rdtsc_timer_rogflow",
"json-coord-parser",
"timer-macros"
]
resolver = "3"

[workspace.dependencies]
coordinate_generator = { path = "coordinate-generator" }
rdtsc_timer_rogflow = { path = "rdtsc_timer_rogflow" }
json-coord-parser = { path = "json-coord-parser" }
timer-macros = { path = "timer-macros" }
