[package]
name = "coordinate-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
jemallocator = "0.5.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
simd-json = { version = "0.17.0", default-features=false, features = ["serde_impl", "swar-number-parsing", "arraybackend", "approx-number-parsing", ] }
