[package]
name = "json-coord-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
rdtsc_timer_rogflow.workspace = true
memmap2 = "0.9.9"

[dev-dependencies]
criterion = "0.5"
simd-json = { version = "0.17.0", default-features=false, features = ["serde_impl", "swar-number-parsing", "arraybackend", "approx-number-parsing", ] }
jemallocator = "0.5.4"

[[bench]]
name = "deg_parse"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
overflow-checks = false
debug = false

